--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       background-color: hsl(235, 50%, 10%);;
     }
     .outer-box{
-      background-color: hsl(244, 38%, 16%);
+      background-color: hsl(244, 36%, 22%);
       margin-top:150px;
       margin-bottom: auto;
       margin-left: auto;
@@ -68,6 +68,25 @@
   width: 400px;
   height:350px;
 }
+table{
+  margin-left: 25px;
+  margin-top: -25px;
+  padding: 20px;
+}
+.td1{
+  font-size: 30px;
+  padding: 7px;
+  font-family: "Inter";
+}
+.td2{
+  font-size: 10px;
+  font-family: "Lexend Deca";
+  
+}
+tr{
+  margin-top: -10px;
+  padding:10px;
+}
   </style>
 </head>
 <body class="back-color">
@@ -80,6 +99,18 @@
       </h1>
       <p class="para">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
+        <table>
+          <tr>
+            <td class="td1">10k+</td>
+            <td class="td1">314</td>
+            <td class="td1">12M</td>
+          </tr>
+          <tr>
+            <td class="td2">COMPANIES</td>
+            <td class="td2">TEMPLATES</td>
+            <td class="td2">QUERIES</td>
+          </tr>
+        </table>
     </div>
     <div class="column-left">
       <img src="image-header-desktop.jpg" class="img-style">
