Seperate style into css file

--- a/index.html
+++ b/index.html
@@ -8,86 +8,12 @@
   <link href="http://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-
+  <link rel="stylesheet" href="styles.css">
 
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-    .back-color{
-      background-color: hsl(235, 50%, 10%);;
-    }
-    .outer-box{
-      background-color: hsl(244, 36%, 22%);
-      margin-top:150px;
-      margin-bottom: auto;
-      margin-left: auto;
-      margin-right: auto;
-      border-style:transparent;
-      width: 800px;
-      height: 350px;
-      border-radius: 5px;
-    }
-    .column-left {
-  float: left;
-  width: 50%;
-  height:175px;
-  color:white;
-  border-radius: 5px;
-}
-.mainhead{
-  font-size: 28px;
-  margin-left:15px;
-  margin-top: 40px;
-  font-weight: 700;
-  font-family: "Inter";
-  /* margin-right: 15px; */
-  padding:20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.para{
-  color:rgb(218, 214, 214);
-  font-size: 14px;
-  padding:5px;
-  text-align:left;
-  margin-left: 25px;
-  margin-top: -15px;
-  font-family: "Lexend Deca";
-  padding:20px;
-}
-.img-style{
-  object-fit: cover;
-  width: 400px;
-  height:350px;
-}
-table{
-  margin-left: 25px;
-  margin-top: -25px;
-  padding: 20px;
-}
-.td1{
-  font-size: 30px;
-  padding: 7px;
-  font-family: "Inter";
-}
-.td2{
-  font-size: 10px;
-  font-family: "Lexend Deca";
   
-}
-tr{
-  margin-top: -10px;
-  padding:10px;
-}
-  </style>
 </head>
 <body class="back-color">
 <div class="outer-box">
@@ -112,6 +38,7 @@ tr{
           </tr>
         </table>
     </div>
+    
     <div class="column-left">
       <img src="image-header-desktop.jpg" class="img-style">
     </div>
