--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body class="back-color">
-<div class="outer-box">
-  <div class="row">
+<div class="parent-div">
+  <div class="content-div1">
+    <h1 class="mainhead">Get
+      <span style="color:hsl(277, 49%, 46%); ">insights</span> 
+      that help your business grow.
+    </h1>
+    <p class="para">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.</p>
+      <table>
+        <tr>
+          <td class="td1">10k+</td>
+          <td class="td1">314</td>
+          <td class="td1">12M</td>
+        </tr>
+        <tr>
+          <td class="td2">COMPANIES</td>
+          <td class="td2">TEMPLATES</td>
+          <td class="td2">QUERIES</td>
+        </tr>
+      </table>
+  </div>
+  <div class="content-div2">
+    <img src="image-header-desktop.jpg">
+  </div>
+  <!-- <div class="row">
     <div class="column-left attribution">
       <h1 class="mainhead">Get
         <span style="color:hsl(277, 49%, 46%); ">insights</span> 
@@ -38,8 +61,11 @@
     <div class="column-left">
       <img src="image-header-desktop.jpg" class="img-style">
     </div>
-  </div> 
+  </div>  -->
 </div>
-
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Talal Qamar</a>.
+</div>
 </body>
 </html>
